--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -1,3 +1,338 @@
 page-explore {
+    .card-actions .card-action {
+        border-radius: 999em;
+        padding: 8px; }
+    .card-actions .card-action.bigger-button {
+        padding: 10px; }
+    .card-actions .card-action.bigger-button .button {
+        width: 60px;
+        height: 68px; }  
+    .padder-copatene{
+        padding-left:35px;
+        padding-right:35px;
+    }
+    .card-actions .button {
+        width: 50px;
+        height: 52px;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
+        text-align: center;
+        font-size: 50px;
+        transition: transform 200ms ease-in; }
+    .card-actions .button .icon:before {
+        font-size: 32px; }
+    .card-actions .button.zoom {
+        transform: scale(1.15);
+        -webkit-transform: scale(1.15); }
+        
+    .card-actions .button img{
+        margin-left:-3px;
+        }	
+        
+    .card-actions.on-profile {
+    position: fixed;
+    bottom: 0;
+    width: 100%; }
 
+    .dot-notification {
+    display: block;
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    left: -3px;
+    top: 10px;
+    background-color: #E45356;
+    border-radius: 50%;
+    border: 2px solid #fff; }
+    .dot-notification.on-avatar {
+        left: inherit;
+        right: -5px;
+        top: 27px; }
+        // #card-stack {
+        //     height: 100%;
+        //     left: 8px;
+        //     top: 8px;
+        //     right: 8px;
+        //     bottom: 2px;
+        //     border-radius: 6px;
+        //     border:1px solid #ddd;
+        //     position: relative;
+        //   }
+         
+        //   #card-stack ion-card {
+        //     border-radius: 5px;
+        //     position: absolute;
+        //     text-align: center;
+        //     top: 3%;
+        //     height: 90%;
+        //   }
+        
+    /* Tinder Cards */
+    .td-cards {
+        display: block;
+    }
+
+    .td-card {
+    height: 100%;
+    position: absolute;
+    left: 8px;
+    top: 8px;
+    right: 8px;
+    bottom: 2px;
+    border-radius: 6px;
+    border:1px solid #ddd;
+    
+    }
+      
+      .td-card .div-img {
+        border-radius: 6px 6px 0 0;
+        background-size: cover;
+        background-position: center center;
+    }
+    .td-card .caption {
+        padding: 0 16px 16px;
+    }
+    i.td-card .image {
+        border-radius: 6px 6px 0 0; }
+
+        .td-card .card-tinder {
+        border-radius: 6px;
+        position: relative;
+        margin: 0;
+        overflow: initial;
+        height: 100%; }
+    
+    
+    .yes-text, .no-text {
+    position: absolute;
+    text-align: center;
+    opacity: 0;
+    z-index: 999;
+    letter-spacing: 0.2em; }
+    .yes-text .icon, .no-text .icon {
+        font-size: 24px; }
+    
+    .no-text {
+    transform: rotate(15deg);
+    top: 54px;
+    right: 16px; }
+
+    .yes-text {
+    transform: rotate(-15deg);
+    top: 54px;
+    left: 16px; }
+
+    .fade {
+    -webkit-transition: 0.2s opacity linear;
+    transition: 0.2s opacity linear;
+    opacity: 0; }
+    
+  
+  
+/* Tinder Pulse */
+.load {
+    border-radius: 100px;
+    position: relative;
+    padding: 4px;
+    -webkit-animation: pulse 2s linear infinite;
+    -moz-animation: pulse 2s linear infinite;
+    -o-animation: pulse 2s linear infinite;
+    animation: pulse 2s linear infinite;
+    }
+    .load img {
+      display: block; }
+    .load:after, .load:before {
+      display: inline-block;
+      margin: auto;
+      position: absolute;
+      left: 4px;
+      top: 4px;
+      content: "";
+      width: 96px;
+      height: 96px;
+      border-radius: 100px;
+      background-color: #aaa;
+      border: 2px solid #fff; }
+    .load:after {
+      z-index: -100;
+      -webkit-animation: outer-ripple 2s linear infinite;
+      -moz-animation: outer-ripple 2s linear infinite;
+      -o-animation: outer-ripple 2s linear infinite;
+      animation: outer-ripple 2s linear infinite; }
+    .load:before {
+      z-index: -200;
+      -webkit-animation: inner-ripple 2s linear infinite;
+      -moz-animation: inner-ripple 2s linear infinite;
+      -o-animation: inner-ripple 2s linear infinite;
+      animation: inner-ripple 2s linear infinite; }
+  
+  @-webkit-keyframes pulse {
+    0% {
+      transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    10% {
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      filter: alpha(opacity=1);
+      opacity: 1; }
+    20% {
+      transform: scale(0.9);
+      -webkit-transform: scale(0.9);
+      filter: alpha(opacity=1);
+      opacity: 1; }
+    100% {
+      transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      filter: alpha(opacity=50);
+      opacity: 0.5; } }
+  
+  @-moz-keyframes pulse {
+    0% {
+      transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    10% {
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      filter: alpha(opacity=1);
+      opacity: 1; }
+    20% {
+      transform: scale(0.9);
+      -webkit-transform: scale(0.9);
+      filter: alpha(opacity=1);
+      opacity: 1; }
+    100% {
+      transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      filter: alpha(opacity=50);
+      opacity: 0.5; } }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    10% {
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      filter: alpha(opacity=1);
+      opacity: 1; }
+    20% {
+      transform: scale(0.9);
+      -webkit-transform: scale(0.9);
+      filter: alpha(opacity=1);
+      opacity: 1; }
+    100% {
+      transform: scale(0.8);
+      -webkit-transform: scale(0.8);
+      filter: alpha(opacity=50);
+      opacity: 0.5; } }
+  
+  /* outer ripple */
+  @-webkit-keyframes outer-ripple {
+    0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    80% {
+      transform: scale(4.5);
+      -webkit-transform: scale(4.5);
+      filter: alpha(opacity=0);
+      opacity: 0; }
+    100% {
+      transform: scale(4.5);
+      -webkit-transform: scale(4.5);
+      filter: alpha(opacity=0);
+      opacity: 0; } }
+  
+  @-moz-keyframes outer-ripple {
+    0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    80% {
+      transform: scale(4.5);
+      -webkit-transform: scale(4.5);
+      filter: alpha(opacity=0);
+      opacity: 0; }
+    100% {
+      transform: scale(4.5);
+      -webkit-transform: scale(4.5);
+      filter: alpha(opacity=0);
+      opacity: 0; } }
+  
+  @keyframes outer-ripple {
+    0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    80% {
+      transform: scale(4.5);
+      -webkit-transform: scale(4.5);
+      filter: alpha(opacity=0);
+      opacity: 0; }
+    100% {
+      transform: scale(4.5);
+      -webkit-transform: scale(4.5);
+      filter: alpha(opacity=0);
+      opacity: 0; } }
+  
+  /* inner ripple */
+  @-webkit-keyframes inner-ripple {
+    0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    30% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    100% {
+      transform: scale(3.5);
+      -webkit-transform: scale(3.5);
+      filter: alpha(opacity=0);
+      opacity: 0; } }
+  
+  @-moz-keyframes inner-ripple {
+    0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    30% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    100% {
+      transform: scale(3.5);
+      -webkit-transform: scale(3.5);
+      filter: alpha(opacity=0);
+      opacity: 0; } }
+  
+  @keyframes inner-ripple {
+    0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    30% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      filter: alpha(opacity=50);
+      opacity: 0.5; }
+    100% {
+      transform: scale(3.5);
+      -webkit-transform: scale(3.5);
+      filter: alpha(opacity=0);
+      opacity: 0; } }
+  
 }
