--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -46,36 +46,497 @@ $colors: (
   padding: 15px; 
 };
 
+/* FLEX from Google Polymer 0.5.2 */
+/* CSS Helper ver 1.0.0 */
+html [layout][horizontal], html [layout][vertical] {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex; }
+
+html [layout][horizontal][inline], html [layout][vertical][inline] {
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-flex;
+  display: inline-flex; }
+
+html [layout][horizontal] {
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row; }
+  html [layout][horizontal][reverse] {
+    -ms-flex-direction: row-reverse;
+    -webkit-flex-direction: row-reverse;
+    flex-direction: row-reverse; }
+
+html [layout][vertical] {
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column; }
+  html [layout][vertical][reverse] {
+    -ms-flex-direction: column-reverse;
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse; }
+
+html [layout][wrap] {
+  -ms-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+html [layout][wrap-reverse] {
+  -ms-flex-wrap: wrap-reverse;
+  -webkit-flex-wrap: wrap-reverse;
+  flex-wrap: wrap-reverse; }
+
+html [flex] {
+  -ms-flex: 1 1 0;
+  /* -webkit-flex: 1; */
+  flex: 1;
+  -webkit-flex-basis: 0;
+  flex-basis: 0;
+  }
+
+html [vertical][layout] > [flex][auto-vertical], html [vertical][layout] [flex][auto-vertical] {
+  -ms-flex: 1 1 auto;
+  -webkit-flex-basis: auto;
+  flex-basis: auto; }
+
+html [flex][auto] {
+  -ms-flex: 1 1 auto;
+  -webkit-flex-basis: auto;
+  flex-basis: auto; }
+
+html [flex][none] {
+  -ms-flex: none;
+  -webkit-flex: none;
+  flex: none; }
+
+html [flex][one] {
+  -ms-flex: 1;
+  -webkit-flex: 1;
+  flex: 1; }
+
+html [flex][two] {
+  -ms-flex: 2;
+  -webkit-flex: 2;
+  flex: 2; }
+
+html [flex][three] {
+  -ms-flex: 3;
+  -webkit-flex: 3;
+  flex: 3; }
+
+html [flex][four] {
+  -ms-flex: 4;
+  -webkit-flex: 4;
+  flex: 4; }
+
+html [flex][five] {
+  -ms-flex: 5;
+  -webkit-flex: 5;
+  flex: 5; }
+
+html [flex][six] {
+  -ms-flex: 6;
+  -webkit-flex: 6;
+  flex: 6; }
+
+html [flex][seven] {
+  -ms-flex: 7;
+  -webkit-flex: 7;
+  flex: 7; }
+
+html [flex][eight] {
+  -ms-flex: 8;
+  -webkit-flex: 8;
+  flex: 8; }
+
+html [flex][nine] {
+  -ms-flex: 9;
+  -webkit-flex: 9;
+  flex: 9; }
+
+html [flex][ten] {
+  -ms-flex: 10;
+  -webkit-flex: 10;
+  flex: 10; }
+
+html [flex][eleven] {
+  -ms-flex: 11;
+  -webkit-flex: 11;
+  flex: 11; }
+
+html [flex][twelve] {
+  -ms-flex: 12;
+  -webkit-flex: 12;
+  flex: 12; }
+
+html [layout][start] {
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start; }
+
+html [layout][center], html [layout][center-center] {
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center; }
+
+html [layout][end] {
+  -ms-flex-align: end;
+  -webkit-align-items: flex-end;
+  align-items: flex-end; }
+
+html [layout][start-justified] {
+  -ms-flex-pack: start;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start; }
+
+html [layout][center-justified], html [layout][center-center] {
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center; }
+
+html [layout][end-justified] {
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end; }
+
+html [layout][around-justified] {
+  -ms-flex-pack: distribute;
+  -webkit-justify-content: space-around;
+  justify-content: space-around; }
+
+html [layout][justified] {
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between; }
+
+html [self-start] {
+  -ms-align-self: flex-start;
+  -webkit-align-self: flex-start;
+  align-self: flex-start; }
+
+html [self-center] {
+  -ms-align-self: center;
+  -webkit-align-self: center;
+  align-self: center; }
+
+html [self-end] {
+  -ms-align-self: flex-end;
+  -webkit-align-self: flex-end;
+  align-self: flex-end; }
+
+html [self-stretch] {
+  -ms-align-self: stretch;
+  -webkit-align-self: stretch;
+  align-self: stretch; }
+
+html [block] {
+  display: block; }
+
+html [hidden] {
+  display: none !important; }
+
+html [relative] {
+  position: relative; }
 
 html [fit] {
+  /* position: absolute; */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  }
+
+body[fullbleed] {
+  margin: 0;
+  height: 100vh; }
+
+html [segment], html segment {
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 1em .5em;
+  padding: 1em;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  border-radius: 5px; }
+
+/* ==========================================================================
+   Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+ table {
+  border-spacing: 0;
+  border-collapse: collapse; }
+
+/**
+ * Scaffolding
+ * --------------------------------------------------
+ */
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+
+html {
+  overflow: hidden;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y; }
+
+body,
+.ionic-body {
+  -webkit-touch-callout: none;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  text-size-adjust: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  word-wrap: break-word;
+  font-size: 14px;
+  font-family: -apple-system;
+  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  line-height: 20px;
+  text-rendering: optimizeLegibility;
+  -webkit-backface-visibility: hidden;
+  -webkit-user-drag: none;
+  -ms-content-zooming: none; }
+
+body.grade-b,
+body.grade-c {
+  text-rendering: auto; }
+
+.content {
+  position: relative; }
+
+
+.menu .scroll-content.scroll-content-false {
+  z-index: 11; }
+
+.scroll-view {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin-top: -1px; }
+  .scroll-view.overflow-scroll {
+    position: relative; }
+  .scroll-view.scroll-x {
+    overflow-x: scroll;
+    overflow-y: hidden; }
+  .scroll-view.scroll-y {
+    overflow-x: hidden;
+    overflow-y: scroll; }
+  .scroll-view.scroll-xy {
+    overflow-x: scroll;
+    overflow-y: scroll; }
+
+/**
+ * Scroll is the scroll view component available for complex and custom
+ * scroll view functionality.
+ */
+.scroll {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  text-size-adjust: none;
+  -webkit-transform-origin: left top;
+  transform-origin: left top; }
+
+/**
+ * Set ms-viewport to prevent MS "page squish" and allow fluid scrolling
+ * https://msdn.microsoft.com/en-us/library/ie/hh869615(v=vs.85).aspx
+ */
+@-ms-viewport {
+  width: device-width; }
+
+.scroll-bar {
+  position: absolute;
+  z-index: 9999; }
+
+.ng-animate .scroll-bar {
+  visibility: hidden; }
+
+.scroll-bar-h {
+  right: 2px;
+  bottom: 3px;
+  left: 2px;
+  height: 3px; }
+  .scroll-bar-h .scroll-bar-indicator {
+    height: 100%; }
+
+.scroll-bar-v {
+  top: 2px;
+  right: 3px;
+  bottom: 2px;
+  width: 3px; }
+  .scroll-bar-v .scroll-bar-indicator {
+    width: 100%; }
+
+.scroll-bar-indicator {
+  position: absolute;
+  border-radius: 4px;
+  background: none;
+  opacity: 1;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear; }
+  .scroll-bar-indicator.scroll-bar-fade-out {
+    opacity: 0; }
+
+.platform-android .scroll-bar-indicator {
+  border-radius: 0; }
+
+.grade-b .scroll-bar-indicator,
+.grade-c .scroll-bar-indicator {
+  background: #aaa; }
+  .grade-b .scroll-bar-indicator.scroll-bar-fade-out,
+  .grade-c .scroll-bar-indicator.scroll-bar-fade-out {
+    -webkit-transition: none;
+    transition: none; }
+
+ion-infinite-scroll {
+  height: 60px;
+  width: 100%;
+  display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center; }
+  ion-infinite-scroll .icon {
+    color: #666666;
+    font-size: 30px;
+    color: #666666; }
+  ion-infinite-scroll:not(.active) .spinner,
+  ion-infinite-scroll:not(.active) .icon:before {
+    display: none; }
+
+.overflow-scroll {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute; }
+  .overflow-scroll.pane {
+    overflow-x: hidden;
+    overflow-y: scroll; }
+  .overflow-scroll .scroll {
+    position: static;
+    height: 100%;
+    -webkit-transform: translate3d(0, 0, 0); }
+  .overflow-scroll.keyboard-up:not(.keyboard-up-confirm) {
+    overflow: hidden; }
+
+/* If you change these, change platform.scss as well */
+.has-header {
+  top: 44px;
+  }
+
+.no-header {
+  top: 0; }
+
+.has-subheader {
+  top: 88px; }
+
+.has-tabs-top {
+  top: 93px; }
+
+.has-header.has-subheader.has-tabs-top {
+  top: 137px; }
+
+.has-footer {
+  bottom: 44px; }
+
+.has-subfooter {
+  bottom: 88px; }
+
+.has-tabs,
+.bar-footer.has-tabs {
+  bottom: 49px; }
+  .has-tabs.pane,
+  .bar-footer.has-tabs.pane {
+    bottom: 49px;
+    height: auto; }
+
+.bar-subfooter.has-tabs {
+  bottom: 93px; }
+
+.has-footer.has-tabs {
+  bottom: 93px; }
+
+.pane {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transition-duration: 0;
+  transition-duration: 0;
+  z-index: 1; }
+
+.view {
+  z-index: 1; }
+
+.pane,
+.view {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-};
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  overflow: hidden; }
 
-html [layout][justified] {
-    -ms-flex-pack: justify;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-};
+.view-container {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%; }
 
-html [layout][vertical] {
-      -ms-flex-direction: column;
-      -webkit-flex-direction: column;
-      flex-direction: column; };
-
-html [layout][vertical][reverse] {
-        -ms-flex-direction: column-reverse;
-        -webkit-flex-direction: column-reverse;
-        flex-direction: column-reverse; 
-      };
-html [layout][horizontal], html [layout][vertical] {
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex; };
-      
+/* end of FLEX from Google Polymer 0.5.2 */ 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
